# hermes

brain-lab-core/: .gitignore  LICENSE  README.md  pyproject.toml
brain-lab-core/docs/architecture/: dh199-ragflow-qdrant-obsidian-foundation-architecture.md
brain-lab-core/src/brain_lab_core/: __init__.py
brain-lab-core/src/brain_lab_core/api/: __init__.py  control_plane.py  fastapi_app.py  mcp_tools.py
brain-lab-core/src/brain_lab_core/contracts/: __init__.py  artifacts.py  base.py  documents.py  errors.py  evidence.py  extensions.py  jobs.py  providers.py  tools.py
brain-lab-core/src/brain_lab_core/observability/: __init__.py  events.py
brain-lab-core/src/brain_lab_core/orchestration/: __init__.py  job_runner.py  planner.py
brain-lab-core/src/brain_lab_core/registry/: __init__.py  _common.py  adapter_registry.py  fixtures.py  tool_registry.py
brain-lab-core/src/brain_lab_core/retrieval/: __init__.py  qdrant.py
brain-lab-core/src/brain_lab_core/security/: __init__.py  policy.py
brain-lab-core/src/brain_lab_core/state/: __init__.py  artifact_store.py  freshness.py  sqlite_store.py
brain-lab-core/tests/: test_api_control_plane.py  test_contract_roundtrip.py  test_contract_validation.py  test_document_extraction_contracts.py  test_job_runner.py  test_registry.py  test_retrieval.py  test_security_observability.py  test_state_ledger.py
plugins-source/hermes-brain-rag/: __init__.py  plugin.yaml
rag/: README.md
rag/obsidian-rag/: .gitignore  Dockerfile.rag-api  README.md  docker-compose.yml
skills/: README.md
wiki/: SCHEMA.md  index.md  log.md
(+67 files in other folders)
