[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "brain-lab-core"
version = "0.1.0"
description = "Generic AI Lab foundation contracts and package skeleton."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Denis Hlinka" }]
dependencies = []
keywords = ["ai-lab", "contracts", "artifacts", "provenance", "retrieval"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
brain_lab_core = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]
